# vikunja-to-gcal

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
